--- a/.env
+++ b/.env
@@ -110,7 +110,7 @@ SWASCO_base_URL= http://41.216.74.222:7070/swasco/
 
 #MOBILE MONEY COMMON
 
-MOBILEMONEY_USE_MOCK=YES #YES/NO 
+MOBILEMONEY_USE_MOCK=NO #YES/NO 
 
 AIRTEL_BASE_URL=https://openapiuat.airtel.africa/
 AIRTEL_GRANT_TYPE=client_credentials
@@ -163,7 +163,7 @@ LUKANGA_MTN_OcpKey =
 LUKANGA_MTN_USERNAME = 
 LUKANGA_MTN_PASSWORD =
 
-LUKANGA_ZAMTEL_ACTIVE=YES      #YES/NO
+LUKANGA_ZAMTEL_ACTIVE=NO      #YES/NO
 LUKANGA_ZAMTEL_SHORTCODE = 
 LUKANGA_ZAMTEL_THIRDPARTYID = 
 LUKANGA_ZAMTEL_PASSWORD = 
@@ -207,11 +207,11 @@ SWASCO_APP_TEST_MSISDN = ''
 SWASCO_MIN_PAYMENT_AMOUNT = 5.00
 
 #SMPP CHANNELS
-SMS_SEND_USE_MOCK=YES #YES/NO 
+SMS_SEND_USE_MOCK=NO #YES/NO 
 SMPP_CHANNEL = ZAMTELSMS
 
 #ZAMTEL
-SMS_GATEWAY_URL = https://apps.zamtel.co.zm/bsms/api/v2.1/action/send/api_key/
+SMS_GATEWAY_URL = https://bulksms.zamtel.co.zm/api/v2.1/action/send/api_key/
 SMS_GATEWAY_APIKEY = 28dd5c6a6dab1bbd2e491cb1e596bfd1
 SMS_GATEWAY_Timeout=20 #seconds
 
