--- a/.env
+++ b/.env
@@ -205,7 +205,7 @@ SWASCO_APP_TEST_MSISDN = ''
 SWASCO_MIN_PAYMENT_AMOUNT = 5.00
 
 #SMPP CHANNELS
-SMS_SEND_USE_MOCK=NO #YES/NO 
+SMS_SEND_USE_MOCK=YES #YES/NO 
 SMPP_CHANNEL = ZAMTELSMS
 
 #ZAMTEL
