--- a/.env
+++ b/.env
@@ -78,33 +78,61 @@ PAYMENT_REVIEW_DELAY=3 #in minutes
 PAYMENT_REVIEW_THRESHOLD=5 #Number
 RESEND_SMS=3 #in minutes
 
-Http_Error_CACHE=1 #in minutes
-Http_Error_THRESHOLD=5 #Number
+HTTP_ERROR_CACHE=1 #in minutes
+HTTP_ERROR_THRESHOLD=5 #Number
 
-BILLING_Error_CACHE=360 #in minutes
-BILLING_Error_THRESHOLD=5 #Number
+BILLING_ERROR_CACHE=360 #in minutes
+BILLING_ERROR_THRESHOLD=5 #Number
 
-#CLIENT BILLING SYSTEM URLs
+#CLIENT CONFIGS
 USE_BILLING_MOCK = NO  #'YES'/'NO'
 USE_RECEIPTING_MOCK = YES  #'YES'/'NO'
 
-CHAMBESHI_base_URL=http://localhost/chambeshi/
+#CHAMBESHI
+CHAMBESHI_USSD_SHORT_CODE=2220
+CHAMBESHI_PREPAID_EXAMPLE=''
+CHAMBESHI_POSTPAID_EXAMPLE=''
+CHAMBESHI_HAS_OWNSMS=YES      #YES/NO
+CHAMBESHI_BASE_URL=http://localhost/chambeshi/
 
-LUKANGA_base_URL=http://213.193.33.247:8083/wsa/wsa1
-LUKANGA_wsdl_URI=/wsdl?targetURI=urn:promun
-LUKANGA_soapUsername=ws
-LUKANGA_soapPassword=Cde32wsx
-LUKANGA_soapToken=999999999999999999999
-LUKANGA_soapCashierNo_AIRTEL=500
-LUKANGA_soapCashierNo_MTN=500
-LUKANGA_soapCashierNo_ZAMTEL=500
-LUKANGA_soapOperator=ws
-LUKANGA_soapConnectionTimeout=5
-LUKANGA_soapExecuteTimeout=20
+#LUKANGA
+LUKANGA_USSD_SHORT_CODE=2106
+LUKANGA_PREPAID_EXAMPLE=''
+LUKANGA_POSTPAID_EXAMPLE=''
+LUKANGA_HAS_OWNSMS=YES      #YES/NO
+LUKANGA_BASE_URL=http://213.193.33.247:8083/wsa/wsa1
+LUKANGA_WSDL_URI=/wsdl?targetURI=urn:promun
+LUKANGA_SOAP_USERNAME=ws
+LUKANGA_SOAP_PASSWORD=Cde32wsx
+LUKANGA_SOAP_TOKEN=999999999999999999999
+LUKANGA_SOAP_CASHIER_NO_AIRTEL=500
+LUKANGA_SOAP_CASHIER_NO_MTN=500
+LUKANGA_SOAP_CASHIER_NO_ZAMTEL=500
+LUKANGA_SOAP_OPERATOR=ws
+LUKANGA_SOAP_CONNECTION_TIMEOUT=5
+LUKANGA_SOAP_EXECUTE_TIMEOUT=20
 
 LUKANGA_BALANCE_CACHE=1440 #in minutes
 
-SWASCO_base_URL= http://41.216.74.222:7070/swasco/
+#SWASCO
+SWASCO_USSD_SHORT_CODE=5757
+SWASCO_PREPAID_EXAMPLE=''
+SWASCO_POSTPAID_EXAMPLE='liv000xxxx or cho000xxxx'
+SWASCO_HAS_OWNSMS=YES      #YES/NO
+SWASCO_BASE_URL= http://41.216.74.222:7070/swasco/
+
+SWASCO_SMS_BASE_URL=https://bulksms.zamtel.co.zm/api/v2.1/action/send/api_key/
+SWASCO_SMS_APIKEY = fb122bb2fca7703d8eed1d239e3f349a
+SWASCO_SMS_SENDER_ID => SWSC,
+SWASCO_REMOTE_TIMEOUT = 20 #in seconds
+SWASCO_RECEIPTING_TIMEOUT=40 #in seconds
+
+#MAZABUKA
+MAZABUKA_USSD_SHORT_CODE=115
+MAZABUKA_PREPAID_EXAMPLE=''
+MAZABUKA_POSTPAID_EXAMPLE=''
+MAZABUKA_HAS_OWNSMS=NO      #YES/NO
+MAZABUKA_BASE_URL= http://41.216.74.222:7070/swasco/
 
 #MOBILE MONEY COMMON
 
@@ -139,7 +167,7 @@ CHAMBESHI_AIRTEL_ID =
 CHAMBESHI_AIRTEL_SECRET = 
 CHAMBESHI_AIRTEL_TXREFERENCE =  
 
-CHAMBESHI_MTN_OcpKey = 
+CHAMBESHI_MTN_OCPKEY = 
 CHAMBESHI_MTN_USERNAME = 
 CHAMBESHI_MTN_PASSWORD =
 
@@ -147,7 +175,6 @@ CHAMBESHI_ZAMTEL_SHORTCODE =
 CHAMBESHI_ZAMTEL_THIRDPARTYID = 
 CHAMBESHI_ZAMTEL_PASSWORD = 
 
-CHAMBESHI_APP_TEST_MSISDN = ''
 CHAMBESHI_MIN_PAYMENT_AMOUNT = 5.00
 
 #LUKANGA MOBILE MOMNEY
@@ -157,7 +184,7 @@ LUKANGA_AIRTEL_SECRET = 767739ad-b08f-41e3-af00-881f0a05f8fa
 LUKANGA_AIRTEL_TXREFERENCE =  "Testing transaction"
 
 LUKANGA_MTN_ACTIVE=YES      #YES/NO
-LUKANGA_MTN_OcpKey = 
+LUKANGA_MTN_OCPKEY = 
 LUKANGA_MTN_USERNAME = 
 LUKANGA_MTN_PASSWORD =
 
@@ -166,7 +193,6 @@ LUKANGA_ZAMTEL_SHORTCODE =
 LUKANGA_ZAMTEL_THIRDPARTYID = 
 LUKANGA_ZAMTEL_PASSWORD = 
 
-LUKANGA_APP_TEST_MSISDN = '260978543126*260977580695*260974774379*260966577173*260966414035*260955836118*260976119703'
 LUKANGA_MIN_PAYMENT_AMOUNT = 5.00
     
 #MULONGA MOBILE MOMNEY
@@ -174,7 +200,7 @@ MULONGA_AIRTEL_ID =
 MULONGA_AIRTEL_SECRET = 
 MULONGA_AIRTEL_TXREFERENCE =  "Testing transaction"
 
-MULONGA_MTN_OcpKey = 
+MULONGA_MTN_OCPKEY = 
 MULONGA_MTN_USERNAME = 
 MULONGA_MTN_PASSWORD =
 
@@ -182,7 +208,6 @@ MULONGA_ZAMTEL_SHORTCODE =
 MULONGA_ZAMTEL_THIRDPARTYID = 
 MULONGA_ZAMTEL_PASSWORD = 
 
-MULONGA_APP_TEST_MSISDN = ''
 MULONGA_MIN_PAYMENT_AMOUNT = 5.00
 
 #SWASCO MOBILE MOMNEY
@@ -192,7 +217,7 @@ SWASCO_AIRTEL_SECRET =
 SWASCO_AIRTEL_TXREFERENCE = 
 
 SWASCO_MTN_ACTIVE=YES      #YES/NO
-SWASCO_MTN_OcpKey = 
+SWASCO_MTN_OCPKEY = 
 SWASCO_MTN_USERNAME = 
 SWASCO_MTN_PASSWORD = 
 
@@ -201,7 +226,6 @@ SWASCO_ZAMTEL_SHORTCODE =
 SWASCO_ZAMTEL_THIRDPARTYID = 
 SWASCO_ZAMTEL_PASSWORD = 
 
-SWASCO_APP_TEST_MSISDN = ''
 SWASCO_MIN_PAYMENT_AMOUNT = 5.00
 
 #SMPP CHANNELS
