--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=BillPayAPI
 APP_DESCRIPTION=" - SERVICE (www.smartconcepts.co.zm) - Test Env."
-APP_ENV=local #local/production
+APP_ENV=production #local/production
 APP_KEY=base64:QLGbSuQQyy+xyUO/euhzIzqI7862mZHj4UmycW0BZSk=
 APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
@@ -123,7 +123,7 @@ SWASCO_BASE_URL= http://41.216.74.222:7070/swasco/
 
 SWASCO_SMS_BASE_URL=https://bulksms.zamtel.co.zm/api/v2.1/action/send/api_key/
 SWASCO_SMS_APIKEY = fb122bb2fca7703d8eed1d239e3f349a
-SWASCO_SMS_SENDER_ID => SWSC,
+SWASCO_SMS_SENDER_ID = SWSC
 SWASCO_REMOTE_TIMEOUT = 20 #in seconds
 SWASCO_RECEIPTING_TIMEOUT=40 #in seconds
 
