--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=BillPayAPI
 APP_DESCRIPTION=" - SERVICE (www.smartconcepts.co.zm) - Test Env."
-APP_ENV=local #local/production
+APP_ENV=production #local/production
 APP_KEY=base64:QLGbSuQQyy+xyUO/euhzIzqI7862mZHj4UmycW0BZSk=
 APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
@@ -15,7 +15,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=billpay_production
+DB_DATABASE=billpay_production20240111
 DB_USERNAME=root
 DB_PASSWORD=1NV3R1T4S
 
