--- a/.env.production
+++ b/.env.production
@@ -1,15 +1,16 @@
 APP_NAME=eFectivoBillPay
 APP_DESCRIPTION=" - SERVICE (www.smartconcepts.co.zm) - Production Env."
 APP_ENV=production
-APP_ADMIN_MSISDN=260977787659*260972702707
-APP_KEY=
+APP_KEY=base64:QLGbSuQQyy+xyUO/euhzIzqI7862mZHj4UmycW0BZSk=
 APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
 APP_URL=http://localhost
 APP_TIMEZONE=Africa/Lusaka
+APP_ADMIN_MSISDN=260977787659*260972702707
 
 LOG_CHANNEL=stack
 HTTP_CLIENT_LOGGER_CHANNEL=stack
+LOG_LEVEL=debug
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=mysql
@@ -19,25 +20,53 @@ DB_DATABASE=billpay_production
 DB_USERNAME=root
 DB_PASSWORD=1NV3R1T4S
 
+CACHE_DRIVER=redis
+REDIS_CLIENT=predis
+REDIS_PREFIX=billpayapi
+
+FILESYSTEM_DISK=local
+
+QUEUE_CONNECTION=redis #database sqs
+QUEUE_TABLE=jobs
+QUEUE_FAILED_TABLE=failed_jobs
+
+MEMCACHED_HOST=127.0.0.1
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
 BROADCAST_DRIVER=pusher
 PUSHER_APP_ID=1284947
 PUSHER_APP_KEY=6cbc3a4312036f7e3a7e
 PUSHER_APP_SECRET=c0f76623fb141fada0e7
 PUSHER_APP_CLUSTER=eu
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
 
-CACHE_DRIVER=redis
-REDIS_CLIENT=predis
-REDIS_PREFIX=billpayapi
-
-QUEUE_CONNECTION=redis #database sqs
-QUEUE_TABLE=jobs
-QUEUE_FAILED_TABLE=failed_jobs
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
 
 ***REMOVED***=***REMOVED***UTPYA6QFLCGDOZVN
 ***REMOVED***=7YnWwvmInyvpCkYJbv3pyh7tlxiJObMkx94R6LIR
 AWS_SQS_PREFIX=https://sqs.eu-west-2.amazonaws.com/316737123338
 AWS_DEFAULT_REGION=eu-west-2
 AWS_DEFAULT_QUEUE=billpaySQS
+AWS_BUCKET=
+AWS_USE_PATH_STYLE_ENDPOINT=false
+
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #USSD Env Variables
 ERROR_MESSAGE="Service temporarily unavailable, please try again later."
@@ -54,7 +83,6 @@ RESEND_SMS=3 #in minutes
 
 HTTP_ERROR_CACHE=1 #in minutes
 HTTP_ERROR_THRESHOLD=5 #Number
-
 
 BILLING_ERROR_CACHE=360 #in minutes
 BILLING_ERROR_THRESHOLD=5 #Number
@@ -84,7 +112,7 @@ DB_TRUST_SERVER_CERTIFICATE =true
 LUKANGA_USSD_SHORT_CODE=2106
 LUKANGA_PREPAID_EXAMPLE=''
 LUKANGA_POSTPAID_EXAMPLE=''
-LUKANGA_HAS_OWNSMS=YES      #YES/NO
+LUKANGA_HAS_OWNSMS=NO      #YES/NO
 LUKANGA_PAYMENT_HISTORY=3      #Number
 LUKANGA_BASE_URL=http://213.193.33.247:8083/wsa/wsa1
 LUKANGA_wsdl_URI=/wsdl?targetURI=urn:promun
@@ -95,7 +123,7 @@ LUKANGA_SOAP_CASHIER_NO_AIRTEL=700
 LUKANGA_SOAP_CASHIER_NO_MTN=700
 LUKANGA_SOAP_CASHIER_NO_ZAMTEL=700
 LUKANGA_SOAP_OPERATOR=ws
-LUKANGA_SOAP_CONNECTION_TIMEOUT=5
+LUKANGA_SOAP_CONNECTION_TIMEOUT=30
 LUKANGA_SOAP_EXECUTE_TIMEOUT=30
 
 LUKANGA_BALANCE_CACHE=1440 #in minutes
@@ -198,7 +226,7 @@ MAZABUKA_MIN_PAYMENT_AMOUNT = 5.00
 MAZABUKA_MAX_PAYMENT_AMOUNT=10000
 
 #SMPP CHANNELS
-SMS_SEND_USE_MOCK=YES #YES/NO 
+SMS_SEND_USE_MOCK=NO #YES/NO 
 SMPP_CHANNEL=ZAMTEL
 
 #ZAMTEL
