--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=eFectivoBillPay
 APP_DESCRIPTION=" - SERVICE (www.smartconcepts.co.zm) - Production Env."
-APP_ENV=production
+APP_ENV=Production
 APP_KEY=base64:QLGbSuQQyy+xyUO/euhzIzqI7862mZHj4UmycW0BZSk=
 APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
@@ -16,7 +16,7 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=billpay_production
+DB_DATABASE=billpay_production20240111
 DB_USERNAME=root
 DB_PASSWORD=1NV3R1T4S
 
