--- a/.env
+++ b/.env
@@ -227,7 +227,7 @@ MAZABUKA_MAX_PAYMENT_AMOUNT=10000
 
 #SMPP CHANNELS
 SMS_SEND_USE_MOCK=NO #YES/NO 
-SMPP_CHANNEL=ZAMTEL
+SMPP_CHANNEL=ZAMTELSMS
 
 #ZAMTEL
 SMS_GATEWAY_URL=https://bulksms.zamtel.co.zm/api/v2.1/action/send/api_key/
