--- a/.env
+++ b/.env
@@ -226,7 +226,7 @@ MAZABUKA_MIN_PAYMENT_AMOUNT = 5.00
 MAZABUKA_MAX_PAYMENT_AMOUNT=10000
 
 #SMPP CHANNELS
-SMS_SEND_USE_MOCK=NO #YES/NO 
+SMS_SEND_USE_MOCK=YES #YES/NO 
 SMPP_CHANNEL=ZAMTELSMS
 
 #ZAMTEL
