--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
 APP_URL=http://localhost
 APP_TIMEZONE=Africa/Lusaka
-APP_ADMIN_MSISDN=260977787659*260972702707
+APP_ADMIN_MSISDN=260972702707
 
 LOG_CHANNEL=stack
 HTTP_CLIENT_LOGGER_CHANNEL=stack
