--- a/.env.local
+++ b/.env.local
@@ -96,14 +96,14 @@ CHAMBESHI_HAS_OWNSMS=YES      #YES/NO
 CHAMBESHI_PAYMENT_HISTORY=3      #Number
 CHAMBESHI_BASE_URL=http://localhost/chambeshi/
 
-DB_CONNECTION_CHAMBESHI=sqlsrvchambeshi
-DB_HOST_CHAMBESHI= www.chambeshiwater.co.zm
-DB_PORT_CHAMBESHI=2220
-DB_DATABASE_CHAMBESHI=SmartConcepts
-DB_USERNAME_CHAMBESHI=ExtCon
-DB_PASSWORD_CHAMBESHI='chamBeshi321#'
-DB_ENCRYPT_CHAMBESHI = yes
-DB_TRUST_SERVER_CERTIFICATE =true
+CHAMBESHI_DB_CONNECTION=sqlsrvchambeshi
+CHAMBESHI_DB_HOST= www.chambeshiwater.co.zm
+CHAMBESHI_DB_PORT=2220
+CHAMBESHI_DB_NAME=SmartConcepts
+CHAMBESHI_DB_USERNAME=ExtCon
+CHAMBESHI_DB_PASSWORD='chamBeshi321#'
+CHAMBESHI_DB_ENCRYPT = yes
+CHAMBESHI_DB_TRUST_SERVER_CERTIFICATE =true
 
 #LUKANGA
 LUKANGA_USSD_SHORT_CODE=2106
