--- a/.env
+++ b/.env
@@ -88,18 +88,19 @@ BILLING_ERROR_CACHE=1 #in minutes
 BILLING_ERROR_THRESHOLD=20 #Number
 
 #CLIENT CONFIGS
-USE_BILLING_MOCK=NO  #'YES'/'NO'
-USE_RECEIPTING_MOCK=NO  #'YES'/'NO'
+USE_BILLING_MOCK=NO  #YES/NO
+USE_RECEIPTING_MOCK=NO  #YES/NO
 
 #CHAMBESHI
 CHAMBESHI_USSD_SHORT_CODE=2220
-CHAMBESHI_PREPAID_EXAMPLE=''
-CHAMBESHI_POSTPAID_EXAMPLE=''
+CHAMBESHI_PREPAID_EXAMPLE='0166000000033'
+CHAMBESHI_POSTPAID_EXAMPLE='KCT10482'
 CHAMBESHI_HAS_OWNSMS=NO      #YES/NO
 CHAMBESHI_PAYMENT_HISTORY=3      #Number
 CHAMBESHI_PREPAID_BASE_URL=http://47.89.183.232:8040/api/
 CHAMBESHI_PREPAID_USERNAME=POSTEST
 CHAMBESHI_PREPAID_PASSWORD=6nz8rnut@999
+CHAMBESHI_PREPAID_PASSWORD_VEND=123456
 CHAMBESHI_DB_CONNECTION=sqlsrvchambeshi
 CHAMBESHI_DB_HOST= www.chambeshiwater.co.zm
 CHAMBESHI_DB_PORT=2220
@@ -177,6 +178,22 @@ ZAMTEL_PAYSTATUS_CHECK=3 #Seconds
 ZAMTEL_Http_Timeout=90 #seconds
 ZAMTEL_HAS_FREESMS=NO      #YES/NO
 ZAMTEL_LOG_ALL=NO #YES/NO
+
+#CHAMBESHI MOBILE MOMNEY
+CHAMBESHI_AIRTEL_ID=
+CHAMBESHI_AIRTEL_SECRET=
+CHAMBESHI_AIRTEL_TXREFERENCE=
+
+CHAMBESHI_MTN_OCPKEY=
+CHAMBESHI_MTN_USERNAME=
+CHAMBESHI_MTN_PASSWORD=
+
+CHAMBESHI_ZAMTEL_SHORTCODE=
+CHAMBESHI_ZAMTEL_THIRDPARTYID=
+CHAMBESHI_ZAMTEL_PASSWORD= 
+
+CHAMBESHI_MIN_PAYMENT_AMOUNT=5
+CHAMBESHI_MAX_PAYMENT_AMOUNT=10000
     
 #LUKANGA MOBILE MOMNEY
 LUKANGA_AIRTEL_ID=b58c7196-07cd-45bf-bb1c-2268fc44192c
