--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=eFectivoBillPay
 APP_DESCRIPTION=" - SERVICE (by www.smartconcepts.co.zm) - Production Env."
-APP_ENV=Production
+APP_ENV=Production #Production/local
 APP_KEY=base64:QLGbSuQQyy+xyUO/euhzIzqI7862mZHj4UmycW0BZSk=
 APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
@@ -159,7 +159,7 @@ AIRTEL_BASE_URL=https://openapi.airtel.africa/
 AIRTEL_GRANT_TYPE=client_credentials
 AIRTEL_SUBMIT_PAYMENT=3 #Seconds
 AIRTEL_PAYSTATUS_CHECK=90 #Seconds
-AIRTEL_Http_Timeout=20 #seconds
+AIRTEL_Http_Timeout=30 #seconds
 AIRTEL_HAS_FREESMS=NO      #YES/NO
 AIRTEL_LOG_ALL=NO      #YES/NO
 
