--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 APP_NAME=eFectivoBillPay
 APP_DESCRIPTION=" - SERVICE (by www.smartconcepts.co.zm) - Local Env."
-APP_ENV=Production #Production/local
+APP_ENV=production #production/local
 APP_KEY=base64:QLGbSuQQyy+xyUO/euhzIzqI7862mZHj4UmycW0BZSk=
 APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
