--- a/.env
+++ b/.env
@@ -93,13 +93,13 @@ USE_RECEIPTING_MOCK=NO  #YES/NO
 
 #CHAMBESHI
 CHAMBESHI_USSD_SHORT_CODE=2220
-CHAMBESHI_PREPAID_EXAMPLE='0166000000033'
-CHAMBESHI_POSTPAID_EXAMPLE='KCT10482'
+CHAMBESHI_PREPAID_EXAMPLE='0166000000009'
+CHAMBESHI_POSTPAID_EXAMPLE='KCT10482 OR DEMO10000'
 CHAMBESHI_HAS_OWNSMS=NO      #YES/NO
 CHAMBESHI_PAYMENT_HISTORY=3      #Number
-CHAMBESHI_PREPAID_BASE_URL=http://47.89.183.232:8040/api/
-CHAMBESHI_PREPAID_USERNAME=POSTEST
-CHAMBESHI_PREPAID_PASSWORD=6nz8rnut@999
+CHAMBESHI_PREPAID_BASE_URL=www.chambeshiwater.co.zm:7071/api/
+CHAMBESHI_PREPAID_USERNAME=CHAMSMARTCON
+CHAMBESHI_PREPAID_PASSWORD=ZyX@#987
 CHAMBESHI_PREPAID_PASSWORD_VEND=123456
 CHAMBESHI_DB_CONNECTION=sqlsrvchambeshi
 CHAMBESHI_DB_HOST= www.chambeshiwater.co.zm
@@ -144,6 +144,17 @@ SWASCO_SMS_SENDER_ID = SWSC
 SWASCO_REMOTE_TIMEOUT = 20 #in seconds
 SWASCO_RECEIPTING_TIMEOUT=40 #in seconds
 
+
+#NKANA
+NKANA_USSD_SHORT_CODE=2021
+NKANA_PREPAID_EXAMPLE=0120012000812
+NKANA_POSTPAID_EXAMPLE=
+NKANA_HAS_OWNSMS=NO      #YES/NO
+NKANA_PAYMENT_HISTORY=3      #Number
+NKANA_PREPAID_BASE_URL=http://159.138.162.10:21006/
+NKANA_PREPAID_PLATFORMID=10000
+NKANA_PREPAID_ROOTKEY= 30303030303030303030303030303030
+
 #MAZABUKA
 MAZABUKA_USSD_SHORT_CODE=115
 MAZABUKA_PREPAID_EXAMPLE=''
@@ -171,6 +182,15 @@ MTN_PAYSTATUS_CHECK=120 #Seconds
 MTN_Http_Timeout=20 #seconds
 MTN_HAS_FREESMS=YES  #YES/NO
 MTN_LOG_ALL=NO #"YES/NO
+
+# MTN_BASE_URL=https://sandbox.momodeveloper.mtn.com/collection/
+# MTN_TARGET_ENVIRONMENT=sandbox
+# MTN_CURRENCY=EUR
+# MTN_SUBMIT_PAYMENT=3 #Seconds
+# MTN_PAYSTATUS_CHECK=120 #Seconds
+# MTN_Http_Timeout=20 #seconds
+# MTN_HAS_FREESMS=NO  #YES/NO
+# MTN_LOG_ALL=NO #"YES/NO
 
 ZAMTEL_BASE_URL=https://apps.zamtel.co.zm/ZampayRestProd/Req?
 ZAMTEL_SUBMIT_PAYMENT=3 #Seconds
@@ -226,6 +246,28 @@ SWASCO_ZAMTEL_PASSWORD=%2B4oVG0cLilM%2FpgOq0GbDcTf%2BdHQBqoM3
 
 SWASCO_MIN_PAYMENT_AMOUNT=5
 SWASCO_MAX_PAYMENT_AMOUNT=10000
+
+#NKANA MOBILE MOMNEY
+NKANA_AIRTEL_ID=
+NKANA_AIRTEL_SECRET=
+NKANA_AIRTEL_TXREFERENCE=
+
+#TEST CREDENTIALS
+# NKANA_MTN_OCPKEY=de19af79b1e04eaf9c55d8fdbcb2cb31
+# NKANA_MTN_USERNAME=e1f8fa05-7890-4a00-8485-a14958e7dd47
+# NKANA_MTN_PASSWORD=6574041c0ae543f69a9fabcfd555b64a
+
+#LIVE CREDENTIALS
+NKANA_MTN_OCPKEY=
+NKANA_MTN_USERNAME=
+NKANA_MTN_PASSWORD=
+
+NKANA_ZAMTEL_SHORTCODE=
+NKANA_ZAMTEL_THIRDPARTYID=
+NKANA_ZAMTEL_PASSWORD=
+
+NKANA_MIN_PAYMENT_AMOUNT=5
+NKANA_MAX_PAYMENT_AMOUNT=10000
 
 #MAZABUKA MOBILE MOMNEY
 MAZABUKA_AIRTEL_ID = 
