--- a/.env.local
+++ b/.env.local
@@ -6,7 +6,7 @@ APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
 APP_URL=http://localhost
 APP_TIMEZONE=Africa/Lusaka
-APP_ADMIN_MSISDN=260972702707*260977787659
+APP_ADMIN_MSISDN=260972702707*260977787659*260761028631
 
 LOG_CHANNEL=stack
 HTTP_CLIENT_LOGGER_CHANNEL=stack
@@ -91,7 +91,7 @@ BILLING_ERROR_THRESHOLD=20 #Number
 USE_BILLING_MOCK=NO  #YES/NO
 USE_RECEIPTING_MOCK=YES  #YES/NO
 
-#CHAMBESHI
+#CHAMBESHI - TEST CREDENTIALS
 CHAMBESHI_USSD_SHORT_CODE=2220
 CHAMBESHI_PREPAID_EXAMPLE='0166000000033'
 CHAMBESHI_POSTPAID_EXAMPLE='KCT10482'
@@ -144,6 +144,16 @@ SWASCO_SMS_SENDER_ID = SWSC
 SWASCO_REMOTE_TIMEOUT = 20 #in seconds
 SWASCO_RECEIPTING_TIMEOUT=40 #in seconds
 
+#NKANA
+NKANA_USSD_SHORT_CODE=2021
+NKANA_PREPAID_EXAMPLE=0120012000812
+NKANA_POSTPAID_EXAMPLE=
+NKANA_HAS_OWNSMS=NO      #YES/NO
+NKANA_PAYMENT_HISTORY=3      #Number
+NKANA_PREPAID_BASE_URL=http://159.138.162.10:21006/
+NKANA_PREPAID_PLATFORMID=10000
+NKANA_PREPAID_ROOTKEY= 30303030303030303030303030303030
+
 #MAZABUKA
 MAZABUKA_USSD_SHORT_CODE=115
 MAZABUKA_PREPAID_EXAMPLE=''
@@ -163,9 +173,9 @@ AIRTEL_Http_Timeout=30 #seconds
 AIRTEL_HAS_FREESMS=NO      #YES/NO
 AIRTEL_LOG_ALL=NO      #YES/NO
 
-MTN_BASE_URL=https://proxy.momoapi.mtn.com/collection/
-MTN_TARGET_ENVIRONMENT=mtnzambia
-MTN_CURRENCY=ZMW
+MTN_BASE_URL=https://sandbox.momodeveloper.mtn.com/collection/
+MTN_TARGET_ENVIRONMENT=sandbox
+MTN_CURRENCY=EUR
 MTN_SUBMIT_PAYMENT=3 #Seconds
 MTN_PAYSTATUS_CHECK=120 #Seconds
 MTN_Http_Timeout=20 #seconds
@@ -226,6 +236,23 @@ SWASCO_ZAMTEL_PASSWORD=%2B4oVG0cLilM%2FpgOq0GbDcTf%2BdHQBqoM3
 
 SWASCO_MIN_PAYMENT_AMOUNT=5
 SWASCO_MAX_PAYMENT_AMOUNT=10000
+
+
+#NKANA MOBILE MOMNEY
+NKANA_AIRTEL_ID=
+NKANA_AIRTEL_SECRET=
+NKANA_AIRTEL_TXREFERENCE=
+
+NKANA_MTN_OCPKEY=de19af79b1e04eaf9c55d8fdbcb2cb31
+NKANA_MTN_USERNAME=e1f8fa05-7890-4a00-8485-a14958e7dd47
+NKANA_MTN_PASSWORD=6574041c0ae543f69a9fabcfd555b64a
+
+NKANA_ZAMTEL_SHORTCODE=
+NKANA_ZAMTEL_THIRDPARTYID=
+NKANA_ZAMTEL_PASSWORD=
+
+NKANA_MIN_PAYMENT_AMOUNT=5
+NKANA_MAX_PAYMENT_AMOUNT=10000
 
 #MAZABUKA MOBILE MOMNEY
 MAZABUKA_AIRTEL_ID = 
