--- a/.env
+++ b/.env
@@ -99,7 +99,7 @@ CHAMBESHI_HAS_OWNSMS=NO      #YES/NO
 CHAMBESHI_PAYMENT_HISTORY=3      #Number
 CHAMBESHI_PREPAID_BASE_URL=www.chambeshiwater.co.zm:7071/api/
 CHAMBESHI_PREPAID_USERNAME=CHAMSMARTCON
-CHAMBESHI_PREPAID_PASSWORD=ZyX@#987
+CHAMBESHI_PREPAID_PASSWORD="ZyX@#987"
 CHAMBESHI_PREPAID_PASSWORD_VEND=123456
 CHAMBESHI_DB_CONNECTION=sqlsrvchambeshi
 CHAMBESHI_DB_HOST= www.chambeshiwater.co.zm
