--- a/.env
+++ b/.env
@@ -101,6 +101,7 @@ CHAMBESHI_PREPAID_BASE_URL=www.chambeshiwater.co.zm:7071/api/
 CHAMBESHI_PREPAID_USERNAME=CHAMSMARTCON
 CHAMBESHI_PREPAID_PASSWORD="ZyX@#987"
 CHAMBESHI_PREPAID_PASSWORD_VEND=123456
+CHAMBESHI_PREPAID_DEBT_BUFFER=10000
 CHAMBESHI_DB_CONNECTION=sqlsrvchambeshi
 CHAMBESHI_DB_HOST= www.chambeshiwater.co.zm
 CHAMBESHI_DB_PORT=2220
@@ -116,6 +117,9 @@ LUKANGA_PREPAID_EXAMPLE=''
 LUKANGA_POSTPAID_EXAMPLE=''
 LUKANGA_HAS_OWNSMS=NO      #YES/NO
 LUKANGA_PAYMENT_HISTORY=3      #Number
+LUKANGA_PREPAID_BASE_URL=159.138.162.10:22457/api/mobile
+LUKANGA_PREPAID_PLATFORMID=1768515976371896320
+LUKANGA_PREPAID_ROOTKEY= 30303030303030303030303030303030
 LUKANGA_BASE_URL=http://41.173.21.30:8083/wsa/wsa1
 LUKANGA_wsdl_URI=/wsdl?targetURI=urn:promun
 LUKANGA_SOAP_USERNAME=ws
