--- a/.env
+++ b/.env
@@ -120,7 +120,7 @@ MTN_SUBMIT_PAYMENT=3 #Seconds
 MTN_PAYSTATUS_CHECK=120 #Seconds
 MTN_Http_Timeout=20 #seconds
 MTN_HAS_FREESMS=YES  #YES/NO
-MTN_LOG_ALL=YES #"YES/NO
+MTN_LOG_ALL=NO #"YES/NO
 
 ZAMTEL_BASE_URL=https://apps.zamtel.co.zm/ZampayRestProd/Req?
 ZAMTEL_SUBMIT_PAYMENT=3 #Seconds
