--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_DEBUG=true
 APP_MODE=UP #UP/DOWN
 APP_URL=http://localhost
 APP_TIMEZONE=Africa/Lusaka
-APP_ADMIN_MSISDN=260972702707*260965199175
+APP_ADMIN_MSISDN=260972702707*260965199175*260968923843
 
 LOG_CHANNEL=stack
 HTTP_CLIENT_LOGGER_CHANNEL=stack
@@ -129,10 +129,10 @@ ZAMTEL_Http_Timeout=90 #seconds
 ZAMTEL_HAS_FREESMS=NO      #YES/NO
 ZAMTEL_LOG_ALL=NO #YES/NO
 
-DPOPay_BASE_URL=
-DPOPay_SUBMIT_PAYMENT=3 #Seconds
-DPOPay_PAYSTATUS_CHECK=3 #Seconds
-DPOPay_Http_Timeout=90 #seconds
+DPOPay_BASE_URL=https://secure.3gdirectpay.com/API/v6/
+DPOPay_SUBMIT_PAYMENT=1 #Seconds
+DPOPay_PAYSTATUS_CHECK=15 #Seconds
+DPOPay_Http_Timeout=30 #seconds
 DPOPay_HAS_FREESMS=NO      #YES/NO
 DPOPay_LOG_ALL=NO #YES/NO
 
