--- a/.env
+++ b/.env
@@ -122,8 +122,8 @@ MTN_Http_Timeout=20 #seconds
 MTN_HAS_FREESMS=YES  #YES/NO
 MTN_LOG_ALL=NO #"YES/NO
 
-ZAMTEL_BASE_URL=http://localhost:8888/payment/services/SYNCAPIRequestMgrService
-#ZAMTEL_BASE_URL=http://172.18.2.135:7661/payment/services/SYNCAPIRequestMgrService
+# ZAMTEL_BASE_URL=http://localhost:8888/payment/services/SYNCAPIRequestMgrService
+ZAMTEL_BASE_URL=http://172.18.2.135:7661/payment/services/SYNCAPIRequestMgrService
 ZAMTEL_STATUS_BASE_URL=https://apps.zamtel.co.zm/Querytxn/fetchTestTxn/
 ZAMTEL_SUBMIT_PAYMENT=3 #Seconds
 ZAMTEL_PAYSTATUS_CHECK=3 #Seconds
