--- a/.env
+++ b/.env
@@ -81,6 +81,7 @@ MIS_REFRESH=3 #in minutes
 PAYMENT_REVIEW_DELAY=3 #in minutes
 PAYMENT_REVIEW_THRESHOLD=1 #Number
 RESEND_SMS=3 #in minutes
+DASHBOARD_CACHE=5 #in minutes
 
 HTTP_ERROR_CACHE=1 #in minutes
 HTTP_ERROR_THRESHOLD=5 #Number
@@ -123,7 +124,7 @@ MTN_HAS_FREESMS=YES  #YES/NO
 MTN_LOG_ALL=NO #"YES/NO
 
 # ZAMTEL_BASE_URL=http://localhost:8888/payment/services/SYNCAPIRequestMgrService
-ZAMTEL_BASE_URL=http://172.18.2.135:7661/payment/services/SYNCAPIRequestMgrService
+ZAMTEL_BASE_URL=http://172.18.0.133:7661/payment/services/SYNCAPIRequestMgrService
 ZAMTEL_STATUS_BASE_URL=https://apps.zamtel.co.zm/Querytxn/fetchTestTxn/
 ZAMTEL_SUBMIT_PAYMENT=3 #Seconds
 ZAMTEL_PAYSTATUS_CHECK=3 #Seconds
