--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ DB_PASSWORD=1NV3R1T4S
 CACHE_DRIVER=redis
 
 QUEUE_CONNECTION=redis #database sqs
+QUEUE_FAILED_DRIVER=null
 QUEUE_TABLE=jobs
 QUEUE_FAILED_TABLE=failed_jobs
 
