--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-/.phpunit.cache
-/node_modules
-/public/build
-/public/hot
-/public/storage
-/storage/*.key
-.env.backup
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-auth.json
-npm-debug.log
-yarn-error.log
-/.fleet
-/.idea
-/.vscode
-/.DS_Store.env
+# Environment files
+.env
+.env.*
+.env copy
+.env.local
+.env.development
+.env.production
+
+
