--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+
+# macOS
+.DS_Store
+
+# IDE / Editors
+.vscode/
+.idea/
+
 # Environment files
 .env
 .env.*
@@ -6,4 +14,9 @@
 .env.development
 .env.production
 
+# PHPUnit cache
+.phpunit.result.cache
 
+# Node / composer / cache
+node_modules/
+vendor/
