changed .env file

--- a/.env.local
+++ b/.env.local
@@ -18,7 +18,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=billpay_production
 DB_USERNAME=root
-DB_PASSWORD=1NV3R1T4S
+DB_PASSWORD=
 
 CACHE_DRIVER=redis
 REDIS_CLIENT=predis
@@ -163,7 +163,7 @@ MAZABUKA_PAYMENT_HISTORY=3      #Number
 MAZABUKA_BASE_URL= http://41.216.74.222:7070/swasco/
 
 #MOBILE MONEY COMMON
-WALLET_USE_MOCK= YES #YES/NO 
+WALLET_USE_MOCK= YES #YES/NO
 
 AIRTEL_BASE_URL=https://openapi.airtel.africa/
 AIRTEL_GRANT_TYPE=client_credentials
@@ -200,11 +200,11 @@ CHAMBESHI_MTN_PASSWORD=
 
 CHAMBESHI_ZAMTEL_SHORTCODE=
 CHAMBESHI_ZAMTEL_THIRDPARTYID=
-CHAMBESHI_ZAMTEL_PASSWORD= 
+CHAMBESHI_ZAMTEL_PASSWORD=
 
 CHAMBESHI_MIN_PAYMENT_AMOUNT=5
 CHAMBESHI_MAX_PAYMENT_AMOUNT=10000
-    
+
 #LUKANGA MOBILE MOMNEY
 LUKANGA_AIRTEL_ID=b58c7196-07cd-45bf-bb1c-2268fc44192c
 LUKANGA_AIRTEL_SECRET=1664bf14-e2af-4442-b908-71bcb78affa6
@@ -216,7 +216,7 @@ LUKANGA_MTN_PASSWORD=3684687dde40440d9a6d5134ab92236d
 
 LUKANGA_ZAMTEL_SHORTCODE=
 LUKANGA_ZAMTEL_THIRDPARTYID=
-LUKANGA_ZAMTEL_PASSWORD= 
+LUKANGA_ZAMTEL_PASSWORD=
 
 LUKANGA_MIN_PAYMENT_AMOUNT=5
 LUKANGA_MAX_PAYMENT_AMOUNT=10000
@@ -255,23 +255,23 @@ NKANA_MIN_PAYMENT_AMOUNT=5
 NKANA_MAX_PAYMENT_AMOUNT=10000
 
 #MAZABUKA MOBILE MOMNEY
-MAZABUKA_AIRTEL_ID = 
-MAZABUKA_AIRTEL_SECRET = 
-MAZABUKA_AIRTEL_TXREFERENCE =  
+MAZABUKA_AIRTEL_ID =
+MAZABUKA_AIRTEL_SECRET =
+MAZABUKA_AIRTEL_TXREFERENCE =
 
-MAZABUKA_MTN_OCPKEY = 
-MAZABUKA_MTN_USERNAME = 
+MAZABUKA_MTN_OCPKEY =
+MAZABUKA_MTN_USERNAME =
 MAZABUKA_MTN_PASSWORD =
 
-MAZABUKA_ZAMTEL_SHORTCODE = 
-MAZABUKA_ZAMTEL_THIRDPARTYID = 
-MAZABUKA_ZAMTEL_PASSWORD = 
+MAZABUKA_ZAMTEL_SHORTCODE =
+MAZABUKA_ZAMTEL_THIRDPARTYID =
+MAZABUKA_ZAMTEL_PASSWORD =
 
 MAZABUKA_MIN_PAYMENT_AMOUNT = 5.00
 MAZABUKA_MAX_PAYMENT_AMOUNT=10000
 
 #SMPP CHANNELS
-SMS_SEND_USE_MOCK= YES #YES/NO 
+SMS_SEND_USE_MOCK= YES #YES/NO
 SMPP_CHANNEL=ZAMTELSMS
 
 #ZAMTEL
